--- a/src/app/comp/node-inspector/wf-celement-node/wf-celement-node.component.html
+++ b/src/app/comp/node-inspector/wf-celement-node/wf-celement-node.component.html
@@ -26,7 +26,7 @@
         <code [innerHTML]="$any(nodeItem.modeldata).instanceName | highlight: searchResult.search.phrase"></code>
     </p>
     }
-    @if ($any(nodeItem.modeldata).agent != '') {
+    @if ($any(nodeItem.modeldata).agent != null && $any(nodeItem.modeldata).agent != '') {
     <p class="mb-1">
         <strong>
             <i class="bi bi-router me-1"></i>
