--- a/src/app/comp/workflow-ui/canvas/canvas.component.html
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.html
@@ -60,7 +60,8 @@
                 </text>
                 }
                 <rect [attr.width]="node.width" [attr.height]="node.height" [attr.x]="node.x" [attr.y]="node.y" rx="5"
-                    ry="5" [ngClass]="{'proc-box': true, 'resize-to-parent': true, 'has-match': node.hasMatch}"
+                    ry="5"
+                    [ngClass]="{'proc-box': true, 'resize-to-parent': true, 'has-match': node.hasMatch, 'has-highlight': node.hasHighlight}"
                     (click)="selectNode(node)" (mouseover)="hoverNode(node)" (mouseout)="leaveNode(node)">
                 </rect>
             </g>
