--- a/src/app/comp/workflow-ui/canvas/canvas.component.scss
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.scss
@@ -28,13 +28,21 @@ svg.workflow {
 
         rect.proc-box {
             cursor: pointer;
-            fill: rgba($color: #efefef, $alpha: .1);
             stroke-width: 2;
             stroke: none;
 
             &.has-match {
                 stroke: #16DB93;
-                fill: rgba($color: #16DB93, $alpha: .15);
+                fill: rgba($color: #16DB93, $alpha: .1);
+            }
+
+            &.has-highlight {
+                stroke: #c1db16;
+                fill: rgba($color: #c1db16, $alpha: .1);
+            }
+
+            &:not(.has-match):not(.has-highlight) {
+                fill: rgba($color: #efefef, $alpha: .1);
             }
         }
 
