--- a/src/app/comp/workflow-ui/workflow-ui.component.html
+++ b/src/app/comp/workflow-ui/workflow-ui.component.html
@@ -133,7 +133,7 @@
                             </button>
                             @if (getWorkflowByName(refitem.name) != null) {
                             <a target="_blank"
-                                [href]="'#workflow?uuid=' + getWorkflowByName(refitem.name)!.uuid + '&t=' + searchResult!.search.token">
+                                [href]="'#workflow?uuid=' + getWorkflowByName(refitem.name)!.uuid + '&t=' + searchResult!.search.token + '&highlight=' + workflow.name">
                                 <button type="button" class="btn btn-sm">
                                     <i class="bi bi-box-arrow-up-right me-1"></i>
                                 </button>
@@ -153,8 +153,8 @@
         </div>
     </section>
     <div style="margin-left: -24px;">
-        <app-workflow-ui-canvas [graphModel]="model" [searchResult]="searchResult"
-            [workflow]="workflow"></app-workflow-ui-canvas>
+        <app-workflow-ui-canvas [graphModel]="model" [searchResult]="searchResult" [workflow]="workflow"
+            [highlightWorkflowRef]="highlightWorkflowRef"></app-workflow-ui-canvas>
     </div>
 </article>
 }
