--- a/src/app/comp/result/certstore/certstore.component.html
+++ b/src/app/comp/result/certstore/certstore.component.html
@@ -4,23 +4,27 @@
     <tbody>
         @for (item of certstore.keystore; track $index) {
         <tr>
-            <td [ngClass]="{ 'cursor-pointer': true, 'text-success': itemsMatched.keystore.includes(item.certX509SubjectDN)}"
-                (click)="selectNode(item)">
+            <td
+                [ngClass]="{ 'cursor-pointer': true, 'text-success': itemsMatched.keystore.includes(item.certX509SubjectDN)}">
                 <div class="text-truncate">
                     <i class="bi bi-key-fill me-2"
                         [title]="l10nphrase.result.certStoreItem.nodeInspector.subject[0]"></i>
-                    <span [innerHTML]="item.certX509SubjectDN | highlight: searchResult.search.phrase"></span>
+                    <span [innerHTML]="item.certX509SubjectDN | highlight: searchResult.search.phrase"
+                        (mouseover)="hoverNode(item, $event)" (mouseout)="leaveNode(item)"
+                        (click)="selectNode(item)"></span>
                 </div>
             </td>
         </tr>
         }
         @for (item of certstore.truststore; track $index) {
         <tr>
-            <td [ngClass]="{ 'cursor-pointer': true, 'text-success': itemsMatched.truststore.includes(item.certX509SubjectDN)}"
-                (click)="selectNode(item)">
+            <td
+                [ngClass]="{ 'cursor-pointer': true, 'text-success': itemsMatched.truststore.includes(item.certX509SubjectDN)}">
                 <div class="text-truncate">
                     <i class="bi bi-award me-2" [title]="l10nphrase.result.certStoreItem.nodeInspector.subject[1]"></i>
-                    <span [innerHTML]="item.certX509SubjectDN | highlight: searchResult.search.phrase"></span>
+                    <span [innerHTML]="item.certX509SubjectDN | highlight: searchResult.search.phrase"
+                        (mouseover)="hoverNode(item, $event)" (mouseout)="leaveNode(item)"
+                        (click)="selectNode(item)"></span>
                 </div>
             </td>
         </tr>
