--- a/src/app/comp/result/tree/tree.component.html
+++ b/src/app/comp/result/tree/tree.component.html
@@ -1,8 +1,9 @@
 @for (item of tree; track $index) {
 <li
     [ngClass]="{ 'has-children': item.children.length > 0 , 'open': isOpen(item), 'has-match': this.matchedNodeUuids.includes(item.uuid)}">
-    <div class="header interaction-reminder" [title]="l10n(l10nphrase.result.common.clickToOpenDialog, [item.name])"
-        (click)="selectNode(item)" [id]="'drag-root-' + item.uuid">
+    <div class="header" [title]="l10n(l10nphrase.result.common.clickToOpenDialog, [item.name])"
+        (mouseover)="hoverNode(item, $event)" (mouseout)="leaveNode(item)" (click)="selectNode(item)"
+        [id]="'drag-root-' + item.uuid">
         @if (item.children.length > 0) {
         <i [ngClass]="['bi me-2', isOpen(item) ? 'bi-dash-square' : 'bi-plus-square']"
             (click)="toggleNode(item); $event.stopImmediatePropagation()"></i>
